--- a/src/views/notes/form-edit-notes.hbs
+++ b/src/views/notes/form-edit-notes.hbs
@@ -1,64 +1,42 @@
-<div class="col-md-4 mx-auto">
-  <div class="card-body">
-
-    <div class="form-control">
-      <h1 class="text-center">Edit Note</h1>
-      <div class="form-group">
-        <label for="title">Title</label>
-        <input
-          type="text"
-          class="form-control border border-secondary"
-          id="title"
-          name="title"
-          value="{{note.title}}"
-        />
-      </div>
-
-      <div class="form-group mt-3">
-        <label for="description">Content</label>
-        <textarea
-          class="form-control border border-secondary"
-          id="description"
-          name="description"
-          
-        >{{note.description}}</textarea>
-      </div>
-      <button
-        class="btn btn-success mt-3"
-        {{!-- onclick="oneditNote('{{note._id, note.title, note.description}} ')" --}}
-        onclick="oneditNote('{{note._id}}', '{{note.title}}', '{{note.description}}')"
-      >
-        <i class="fas fa-edit"></i>
-        Update Note
-      </button>
-    </div>
-
-    <div class="toast-container position-fixed top-0 end-0 p-3">
-      <div
-        id="notificationToastEdit"
-        class="toast bg-success text-white"
-        role="alert"
-      >
-        <div class="toast-body d-flex align-items-center">
-          <i class="fas fa-check-circle me-2"></i>
-          Nota editada
-        </div>
-      </div>
-    </div>
-
-    <div class="toast-container position-fixed top-0 end-0 p-3">
-      <div
-        id="notificationToast"
-        class="toast bg-success text-white"
-        role="alert"
-      >
-        <div class="toast-body d-flex align-items-center">
-          <i class="fas fa-check-circle me-2"></i>
-          Nota actualizada exitosamente
-        </div>
-      </div>
-    </div>
-
+<form action="/notes/update/{{note._id}}?_method=PUT" method="POST">
+  <div class="form-group">
+    <label for="title">Title</label>
+    <input
+      type="text"
+      class="form-control border border-secondary"
+      id="title"
+      name="title"
+      value="{{note.title}}"
+    />
   </div>
 
-</div>
+  <div class="form-group mt-3">
+    <label for="description">Content</label>
+    <textarea
+      class="form-control border border-secondary"
+      id="description"
+      name="description"
+    >{{note.description}}</textarea>
+  </div>
+
+  <div class="form-group mt-3">
+    <label for="category">Category</label>
+    {{!-- <select name="category" class="form-select border border-secondary">
+      <option value="all-notes" {{#if note.isAllNotes}}selected{{/if}}>All Notes</option>
+      <option value="to do list" {{#if note.isTodo}}selected{{/if}}>To Do List</option>
+      <option value="work" {{#if note.isWork}}selected{{/if}}>Work</option>
+      <option value="hobbies" {{#if note.isHobby}}selected{{/if}}>Hobbies</option>
+    </select> --}}
+<select name="category" class="form-select">
+  {{#each categories}}
+    <option value="{{this.name}}" {{#if (eq this.name ../note.category.name)}}selected{{/if}}>
+      {{this.name}}
+    </option>
+  {{/each}}
+</select>
+  </div>
+
+  <button class="btn btn-success mt-3">
+    <i class="fas fa-edit"></i> Update Note
+  </button>
+</form>
