--- a/src/views/user/profileUser.hbs
+++ b/src/views/user/profileUser.hbs
@@ -1,1 +1,9 @@
-<h1 class="text-info">Profile</h1>
+<h1 class="text-info">Profile </h1>
+<ul class="text-light">
+  <li>name:{{user.name}}</li>
+  <li>email:{{user.email}}</li>
+  <li>createdAt:{{user.createdAt}}</li>
+  <li>updatedAt:{{user.updatedAt}}</li>
+  <li>id:{{user.id}}</li>
+
+</ul>
