--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -3,7 +3,7 @@
     <div class="row">
       <!-- Columna de contacto -->
       <div class="col-md-6">
-        <h5 class="mb-3 text-success">Contacto</h5>
+        <h5 class="mb-3 text-success">Contact</h5>
         <div class="d-flex flex-column">
           <a
             href="https://wa.me/1234567890"
@@ -25,7 +25,7 @@
       <!-- Columna de información -->
       <div class="col-md-6 text-md-end">
         <h5 class="mb-3 text-success">MiniMango</h5>
-        <p class="mb-0">Tu aplicación de notas favorita</p>
+        <p class="mb-0">Your favourite app notes</p>
       </div>
     </div>
 
@@ -37,7 +37,7 @@
       <div class="col-12 text-center">
         <p class="mb-0">
           <i class="fas fa-copyright me-1"></i>
-          2025 MiniMango. Todos los derechos reservados.
+          2025 MiniMango. All rigths reserved.
         </p>
       </div>
     </div>
