--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -107,7 +107,7 @@
           <li class="nav-item">
             <a class="nav-link text-light px-2" href="/notes/new-category">
               <i class="fas fa-folder-plus me-1"></i>
-              Add Category
+              Manage Categories
             </a>
           </li>
           <li class="nav-item">
